# dal/model/question.go
@@ -7,8 +7,8 @@ const TableNameQuestion = "question"
 // Question mapped from table <question>
 type Question struct {
 	gorm.Model  `swaggerignore:"true"`
-	TheQuestion string `gorm:"type:text"`
-	Group       string `gorm:"type:character(16)"`
+	TheQuestion string `gorm:"type:text" json:"question"`
+	Group       string `gorm:"type:character(16)" json:"group"`
 }
 
 // TableName Question's table name
