# dal/model/scores.go
@@ -8,15 +8,15 @@ const TableNameScore = "scores"
 
 // Score mapped from table <scores>
 type Score struct {
-	AdminID           uint `gorm:"primaryKey"`
-	Admin             Admin
-	ApplicantID       uint `gorm:"primaryKey"`
-	Applicant         Applicant
-	Group             string `gorm:"type:character(16)"`
+	AdminID           uint      `gorm:"primaryKey"`
+	Admin             Admin     `json:"-"`
+	ApplicantID       uint      `gorm:"primaryKey"`
+	Applicant         Applicant `json:"-"`
+	Group             string    `gorm:"type:character(16);primaryKey"`
 	Score             float64
 	StandardID        uint
-	Standard          Standard
-	EvaluationDetails string `gorm:"type:jsonb"`
+	Standard          Standard `json:"-"`
+	EvaluationDetails string   `gorm:"type:jsonb"`
 	UpdatedAt         time.Time
 }
 
